# Mandate

./: .dockerignore  .gitignore  .npmrc  .prettierignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agent-materialize/model_gateway/: module-part-00.b64  module-part-01.b64  module-part-02.b64  module-part-03.b64  module-part-04.b64  module-part-05.b64  module-part-06.b64  module-part-07.b64  module-part-08.b64  module-part-09.b64  test-part-00.b64  test-part-01.b64  test-part-02.b64  (+1 more)
.diagnostics/: page-fetcher-mypy.txt  pnpm-audit.json  pnpm-audit.txt  pnpm11-frozen-install.txt  pnpm11-migration.txt  pnpm11-validation.txt
config/: model-routing.example.yaml  model-routing.yaml
design/: .thumbnail  Brand Foundations.dc.html  Clickable Prototype.dc.html  Journey and Flows.dc.html  Landing and Account.dc.html  Mandate Brief Specimen.dc.html  Product Screens.dc.html  README.md  Voice and Naming.dc.html
fixtures/: README.md
infra/: README.md
product-specification/: README.md  manifest.json
scripts/: __init__.py  generate_schemas.py  generate_traceability_report.py  temporary_apply_er_relationship_hints.py  verify_container_runtime.py
supabase/: README.md  config.toml
tests/: test_ci_pipeline.py  test_container_foundation.py  test_entity_confirmation_migration.py  test_entity_confirmation_ui.py  test_entity_resolution_migration.py  test_preliminary_research_enqueue_migration.py  test_repository_layout.py  test_shared_schemas.py  test_supabase_foundation.py  test_toolchain_pins.py  test_traceability_report.py
(+257 files in other folders)
